protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_text_format_message-6.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Message {
        fields: [
            Field {
                name: Ident(
                    Ident {
                        value: "message",
                        span: 0..7,
                    },
                ),
                value: Message(
                    Message {
                        fields: [
                            Field {
                                name: Ident(
                                    Ident {
                                        value: "foo",
                                        span: 11..14,
                                    },
                                ),
                                value: Scalar(
                                    String(
                                        String {
                                            value: "bar",
                                            span: 16..21,
                                        },
                                    ),
                                ),
                                span: 11..21,
                            },
                        ],
                    },
                    9..23,
                ),
                span: 0..23,
            },
        ],
    },
)
