protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_text_format_message-8.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Message {
        fields: [
            Field {
                name: Extension(
                    FullIdent {
                        parts: [
                            Ident {
                                value: "ext",
                                span: 1..4,
                            },
                            Ident {
                                value: "message",
                                span: 5..12,
                            },
                        ],
                    },
                    0..13,
                ),
                value: Message(
                    Message {
                        fields: [
                            Field {
                                name: Ident(
                                    Ident {
                                        value: "foo",
                                        span: 17..20,
                                    },
                                ),
                                value: Scalar(
                                    String(
                                        String {
                                            value: "bar",
                                            span: 22..27,
                                        },
                                    ),
                                ),
                                span: 17..27,
                            },
                        ],
                    },
                    15..29,
                ),
                span: 0..29,
            },
        ],
    },
)
